# IMACANARD

./: .gitignore  CMakeLists.txt  README.md
lib/glbasimac/glbasimac/: glbi_texture.hpp
lib/glbasimac/src/: glbi_engine.cpp  glbi_texture.cpp
lib/glbasimac/tools/: mesh.hpp  stb_image.h
lib/imgui/backends/: imgui_impl_glfw.cpp
src/: character.cpp  display.cpp  enemy.cpp  game_state.cpp  main.cpp  map.cpp  player.cpp  texture.cpp
src/includes/: character.hpp  const.hpp  display.hpp  enemy.hpp  game_state.hpp  map.hpp  player.hpp  texture.hpp
